# AI_Engineer_Assessment

./: .gitignore  README.md  pyproject.toml
src/: classifier.py  document_processor.py  extractor.py  main.py  retrieval.py  schemas.py
