[project]
name = "ar-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi,
    "langchain-community,
    "numpy,
    "pandas,
    "pdfplumber,
    "pydantic,
    "pymupdf,
    "pypdf2",
    "python-dotenv",
    "python-multipart==0.0.6",
    "sentence-transformers==2.3.1",
    "spacy==3.7.2",
    "torch>=2.9.0",
    "transformers==4.36.2",
    "uvicorn[standard]==0.27.0",
]
